@@ -4,9 +4,9 @@
 
 int
 main(void) {
-    char* random_test = generate(LONG_PIN_LENGTH, PIN_CHARS);
+    char* random_test = generate(PWD_LENGTH, PWD_CHAR_SIZE, PWD_CHARS);
 
-    storePair(LONG_PIN_LENGTH, random_test);
+    storePair(PWD_LENGTH, random_test);
     free(random_test);
 
     return 0;
