@@ -1,10 +1,0 @@
-cbb. lpdmupkoncescutumqqn
-aca. qplhbcgfbgjottskiund
-adc. qmtdisgnbpnntirhqeid
-dab. 1445
-daa. 3535
-adc. 1143
-cad. 646665
-abc. 313767
-abb. 453212
-cac. 472313
